@@ -2,7 +2,13 @@
 \title{NEWS file for the gCMAP}
 
 \section{Changes in version 1.3.4}{
- \item{NEW}{Removed lattice and reshape from "Suggests".}
+ \item{NEW}{Removed lattice and reshape dependencies.}
+ \item{NEW}{Removed cmapQAPlot function.}
+ \item{NEW}{Added generate_gCMAP_NChannelSet's 'report.center' parameter.}
+}
+
+\section{Changes in version 1.3.3}{
+ \item{NEW}{Experimented with cmapQAPlot function (removed again in version 1.3.4).}
 }
 
 \section{Changes in version 1.3.2}{
